Closed Bug 1650740 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::a11y::GeckoTextMarkerRange::TextInternal]

Categories

(Core :: Disability Access APIs, defect, P1)

x86_64
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed

People

(Reporter: gsvelto, Assigned: eeejay)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [Mac2020_1])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-809fbcc4-cfad-4991-85ee-420f10200705.

Top 10 frames of crashing thread:

0 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:151
1 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:233
2 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:218
3 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:233
4 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:218
5 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:233
6 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:218
7 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:233
8 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:218
9 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:218

This seems to be a macOS-specific crash and it started with buildid 20200703094420.

Fall-out from bug 1649575.

Severity: -- → S2
Has Regression Range: --- → yes
Priority: -- → P1
Regressed by: 1649575
Whiteboard: [Mac2020_1]

Set release status flags based on info from the regressing bug 1649575

Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/879f36821e41
Don't allow text range retrieval when doc tree is not fully constructed. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80

hi, sorry for the ping but this crash is still present in quite some volume in firefox 80.0b - should we reopen the bug here or file a new one for this?

Flags: needinfo?(eitan)

I'll nominate the patch for beta

Flags: needinfo?(eitan)

Oh i see its in beta already. its weird that this is not showing up on nightly. i wonder if the patch in bug 1655779 resolved this. I'll nominate it.

We still have crashes in nightly with this bug's signature, e.g. bp-89e5a922-a502-4839-b0f0-22bfe0200803

Flags: needinfo?(eitan)
See Also: → 1657193
Flags: needinfo?(eitan)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: