Bug 1650740 - Don't allow text range retrieval when doc tree is not fully constructed. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D82410